# FFmpegDemo

MyPlayer/app/: .gitignore  build.gradle
MyPlayer/app/src/main/: AndroidManifest.xml
MyPlayer/app/src/main/java/com/tck/player/: MainActivity.kt  MyPlayer.kt
MyPlayer/app/src/main/res/layout/: activity_main.xml
MyPlayer/app/src/test/java/com/tck/player/: ExampleUnitTest.kt
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AndroidLog.h  AudioChannel.cpp  AudioChannel.h  CMakeLists.txt  JavaCallHelper.cpp  JavaCallHelper.h  MusicPlayer.cpp  MusicPlayer.h  MyPlayerStatus.cpp  MyPlayerStatus.h  MyQueue.cpp  MyQueue.h  native-lib.cpp
app/src/main/java/com/tck/player/: MainActivity.kt  MyMusicPlayer.kt  MyPlayer.kt  OnPlayerListener.kt  OnPlayerListenerAdapter.kt  OnPreparedListener.kt  TimeUtil.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
